# pelican

./: Cargo.toml
src/: lib.rs  map.rs  substitution.rs  unification.rs
src/substitution/: graph.rs  tests.rs
src/substitution/graph/: tarjan.rs
src/substitution/graph/tarjan/: index_map.rs  lowlink.rs  stack.rs
src/substitution/tests/: trait_inference.rs
src/substitution/tests/trait_inference/: implementation.rs
src/unification/: value.rs  var.rs
src/unification/tests/: lambda.rs
src/unification/tests/lambda/: builders.rs  implementation.rs
